--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
   <meta charset="UTF-8">
   <title>Claims Manager</title>
   <link rel="stylesheet" href="styles.css">
+  <script defer src="app.js"></script>
 </head>
 <body>
-  <header>
-    <h1>Claims Manager</h1>
+  <header class="bar">
+    <h1>SurveyorLite-style Claims</h1>
     <nav>
-      <a href="register.html">Register</a>
-      <a href="login.html">Login</a>
+      <a class="btn" href="login.html">Login</a>
+      <a class="btn" href="admin.html">Admin</a>
     </nav>
   </header>
-  <main>
-    <h2>Welcome</h2>
-    <p>Surveyors can register, login, and manage vehicle claims.</p>
+  <main class="wrap">
+    <section class="card">
+      <h2>Welcome</h2>
+      <p>Manage motor insurance claims with dashboard tiles, filters, and a multi-tab editor.</p>
+      <p>Start by logging in.</p>
+      <a class="btn primary" href="login.html">Go to login</a>
+    </section>
   </main>
 </body>
 </html>
