--- a/login.html
+++ b/login.html
@@ -7,12 +7,22 @@
   <script defer src="app.js"></script>
 </head>
 <body>
-  <h2>Surveyor Login</h2>
-  <form id="loginForm">
-    <label>Email <input type="email" name="email" required></label>
-    <label>Password <input type="password" name="password" required></label>
-    <button type="submit">Login</button>
-  </form>
-  <p>New user? <a href="register.html">Register</a></p>
+  <header class="bar">
+    <h1>Login</h1>
+  </header>
+  <main class="wrap">
+    <section class="card">
+      <form id="loginForm" class="grid">
+        <label>Email
+          <input type="email" name="email" required>
+        </label>
+        <label>Password
+          <input type="password" name="password" required>
+        </label>
+        <button class="btn primary" type="submit">Login</button>
+      </form>
+      <p class="muted">Tip: This demo accepts any email/password and keeps session in localStorage.</p>
+    </section>
+  </main>
 </body>
 </html>
